k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud1c-front-svc
  namespace: dev-cloud1c
spec:
  selector:
    app: cloud1c-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cloud1c-server
  namespace: dev-cloud1c
spec:
  type: ExternalName
  externalName: npm-traffic.shared-services.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: cloud1c-cluster
  namespace: dev-cloud1c
spec:
  type: ExternalName
  externalName: npm-traffic.shared-services.svc.cluster.local
